# soez

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
examples/: context_creation.rs  offtopic_queue_of_traits.rs  sanity.rs
soez_core/: Cargo.toml
soez_core/src/: context.rs  lib.rs  prelude.rs  states.rs
soez_core/tests/: test_states.rs
soez_game/: Cargo.toml  log.txt  readme.md
soez_game/assets/: application.yaml  log4rs.yaml  maps.ron
soez_game/assets/maps/: map1.tmx  tileset1.tsx
soez_game/assets/prefabs/: main_menu.ron  sample.ron
soez_game/resources/: log4rs.yaml
soez_game/src/: game.rs  geometry.rs  main.rs  prelude.rs  util.rs
soez_game/src/components/: acceleration.rs  circle.rs  mod.rs  position.rs  renderable.rs  rendering.rs  single.rs  velocity.rs
soez_game/src/resources/: application.rs  input.rs  maps.rs  mod.rs  prefabs.rs  raylib_context.rs  signals.rs
soez_game/src/services/: bootstrap.rs  color.rs  coordinates.rs  geometry.rs  mod.rs  prefabs_manifestation.rs  renderer.rs
soez_game/src/states/: boot_load.rs  level.rs  level_loader.rs  main_menu.rs  mod.rs  on_board.rs  on_boarding.rs  playground.rs
soez_game/src/states/core/: mod.rs  pda.rs  state.rs  transition.rs
soez_game/src/systems/: input.rs  mod.rs  render.rs  speed.rs
