[package]
name = "soez_game"
version = "0.1.0"
authors = ["TalGl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["nightly"]

nightly = [
    "specs/nightly"
]

[dependencies]
log = "0.4.8"
log4rs = "0.10.0"
specs = "0.15.1"
raylib = "1.0.0"
tiled = "0.8.1"
nalgebra = "0.19.0"