[package]
name = "soez_game"
version = "0.1.0"
authors = ["TalGl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["stable"]

stable = [

]

nightly = [
    "specs/nightly"
]

nobuild = [
    "raylib-sys/nobuild"
]

[dependencies]
log = "0.4.8"
log4rs = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.11"
serde_json = "1.0.47"
ron = "0.5.1"
backtrace = "0.3.44"
specs = "0.15.1"
raylib = "1.0.0"
tiled = "0.8.1"
nalgebra = "0.19.0"
